add required options for run